package ar.edu.utn.frba.dds.quemepongo.model.estado;

public interface Estado {
  boolean esSugerible();
  Estado usar();
  Estado lavar();
}
