@startuml iteracion-3

class Guardarropa {
  getPrendasSugeribles(categoria)
}

Guardarropa --> "*" Prenda

abstract UniformeFactory {
  crearUniforme()
  {abstract} getBorradorSuperior()
  {abstract} getBorradorInferior()
  {abstract} getBorradorCalzado()
}

UniformeFactory .right.> Atuendo : <<creates>>
UniformeFactory ..> Borrador
UniformeFactory ..> Borrador
UniformeFactory ..> Borrador

class Atuendo {
   superior
   inferior
   calzado
   accesorio
}

Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda

class Borrador {
  conTipo(tipo)
  conMaterial(material)
  conTrama(trama)
  conColorPrimario(colorPrimario)
  conColorSecundario(colorSecundario)
  (...)
  crearPrenda()
}

Borrador .right.> Prenda : <<creates>>

class Prenda {
 estaLavandose : boolean
 esDeCategoria(categoria)
 esSugerible()
 usar()
 ponerALavar()
 lavar()
}

Prenda --> Estado

interface Estado {
 esSugerible()
 usar()
 lavar()
}

Estado <|.. Nueva
Estado <|.. Usada
Estado <|.. Sucia
Estado <|.. Percudida

Nueva .right.> Usada
Usada .right.> Sucia
Sucia .left.> Usada
Sucia .right.> Percudida

class Sucia {
  usos : Integer
}

@enduml
